--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -180,7 +180,7 @@ You can retrieve the private metadata for a user by using the [`getUser`](/docs/
   curl -XGET -H 'Authorization: CLERK_SECRET_KEY' -H "Content-type: application/json" 'https://api.clerk.com/v1/users/{user_id}'
   ```
   </Tab>
-    
+
   <Tab>
   ```ts filename="private.go"
   var client clerk.Client
@@ -211,7 +211,7 @@ Public metadata is accessible by both the frontend and the backend. This is usef
 
 ### Setting public metadata
 
-<Tabs type="framework" items={["Next.js", "Node", "cURL", "Go", "Ruby"]}>
+<Tabs type="framework" items={["Next.js", "Node", "Go", "Ruby", "cURL"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
     ```ts filename="app/route/public.ts"
