Update sign-up-button.mdx with bugfix
Sample code has an error due to missing `/` in HTML/JSX tag.

--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -19,7 +19,7 @@ The `<SignUpButton>` component is a button that links to the sign-up page or dis
     return (
       <div>
       <h1> Sign up </h1>
-        <SignUpButton>
+        <SignUpButton />
       </div>
     );
   }
